--- a/lekcja7/kwartały.html
+++ b/lekcja7/kwartały.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="kwartaly.js" defer></script>
+    <script src="kwartały.js" defer></script>
     <style>
         p, button {
             font-family: cursive;
