--- a/lekcja3/inline_js.html
+++ b/lekcja3/inline_js.html
@@ -36,6 +36,6 @@
         </form>
                 <p onclick="this.style.fontSize='xx-large'" ondblclick="this.style.fontSize='medium'">RAH</p>
         <div><img src="POLSKA GUROM.png" oncontextmenu="alert(this.src)"></div>
-
+        <select></select>
 </body>
 </html>
