--- a/lekcja5/zad1.html
+++ b/lekcja5/zad1.html
@@ -2,21 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Document</title>
-</head>
     <style>
-        div{
-            border-style: solid;
-            border-color: red;
-            border-width: 1px;
+        div:not(:empty) {
+            border: 1px solid red;
         }
     </style>
+    <script src="asdf.js" defer></script>
+</head>
 <body>
-    <h3 data-type="dodatkowa informacja"
-    id="dae">
-    Atrybuty użytkownika</h3>
-    <div id="cuher"></div>
-    <button id="cuh">Pokaż atrybuty użytkownika</button>
+    <h3 data-id="1024"
+        data-type="dodatkowa informacja"
+        data-value="Kim jesteśmy? Dokąd zmierzamy?"
+        data-born-date="2002-02-02"
+        data-relationship-status="to skomplikowane"
+        id="attr">
+        Atrybuty użytkownika
+    </h3>
+
+    <div id="output"></div>
+
+    <button id="show">Pokaż</button>
 </body>
 </html>
