--- a/lekcja11/prostokaty.html
+++ b/lekcja11/prostokaty.html
@@ -7,17 +7,22 @@
     <script src="prostokaty.js" defer></script>
 </head>
 <body>
-    <form>
-        <label for="">Szerokośc</label>
-        <input type="text" id="szerokość">
+    <label for="szerokosc">Szerokość: </label>
+    <input type="number" id="szerokosc" value="0" min="0" max="20">
 
-        <label for="">Wysokość</label>
-        <input type="text" id="wysokosc">
+    <label for="wysokosc">Wysokość: </label>
+    <input type="number" id="wysokosc" value="0" min="0" max="20">
 
-        <label for="">Kolor</label>
-        <input type="color" id="Kolor">
+    <label for="kolor">Kolor: </label>
+    <input type="color" id="kolor" value="#ffffff">
 
-        <button id="baton">Narysuj</button>
-    </form>
+    <button id="baton">Narysuj</button>
+
+    <br>
+    <br>
+
+    <div id="rect"></div>
+    <p id="obw"></p>
+    <p id="pole"></p>
 </body>
 </html>
