--- a/lekcja14/funkcja_slice_copy.html
+++ b/lekcja14/funkcja_slice_copy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="funkcja_slice.js" defer></script>
+    <script src="funkcja_slice_copy.js" defer></script>
 </head>
 <body>
     <p id="p1">Mikołaj Kopernik - polski polihistor pochodzenia niemieckiego</p>
