--- a/lekcja16/Deep_Purple.html
+++ b/lekcja16/Deep_Purple.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="Deep_Purple.js" defer></script>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+    </style>
 </head>
+
 <body>
-    <h2>Skład Deep Purple</h2>
-    <p id="p1">Deep Purple – brytyjski zespół rockowy, założony w Hertfordshire w 1968 roku w składzie:</p>
-    
-    <button id="baton1">Doklej tekst: Ritchie Blackmore</button><br>
-    <button id="baton2">Doklej tekst: Jon Lord</button><br>
-    <button id="baton3">Doklej tekst: Nick Simper</button><br>
-    <button id="baton4">Doklej tekst: Ian Paice</button><br>
-    <button id="baton5">Doklej tekst: Rod Evans</button><br>
+    <p id="p1">
+        Deep Purple - brytyjski zespół rockowy, założony w 1968 w składzie:
+    </p>
+    <button id="baton1">Doklej tekst Ritchie Blackmore</button>
+    <button id="baton2">Doklej tekst Jon Lord</button>
+    <button id="baton3">Doklej tekst Nick Simper</button>
+    <button id="baton4">Doklej tekst Ian Paice</button>
+    <button id="baton5">Doklej tekst Rod Evans</button>
 </body>
+
 </html>
